packages/compiler/tests/fixtures/invalid/each-bad-array.svelte
<script>
  let items = getSomething();
</script>
<list>
  {#each items as item}
    <text>{item.title}</text>
  {/each}
</list>
